k8s/pihole/pihole-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ui
  namespace: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: pihole.adair.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
  tls:
    - secretName: pihole-ui-tls
